# solana_bridge

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  reademe.md  test.sh  tsconfig.json
actix-bridge/hello-world/: .env  Cargo.toml
actix-bridge/hello-world/src/: constants.rs  main.rs
actix-bridge/hello-world/src/eth/: allowance_checker.rs  connection.rs  constant.rs  executor.rs  latest_block.rs  mod.rs  scaner.rs
actix-bridge/hello-world/src/routes/: get.rs
app/bridge_app/: .env_example  .gitignore  Cargo.toml  README.md  log.md  package-lock.json
app/bridge_app/migration/: Cargo.toml
app/bridge_app/migration/src/: m20220101_000001_create_table.rs
app/bridge_app/src/: errors.rs  main.rs  types.rs
app/bridge_app/src/db/: database.rs
app/bridge_app/src/entity/: mod.rs  orders.rs  prelude.rs
app/bridge_app/src/eth/: allowance_checker.rs  constant.rs  executor.rs  latest_block.rs  mod.rs  scaner.rs  scanner.rs  utils.rs
app/bridge_app/src/solana/: decoder.rs  mod.rs  scanner.rs  sender.rs  utils.rs
app/bridge_app_eth/: .env_example  Cargo.toml
app/bridge_app_eth/src/: main.rs
app/bridge_app_sol/: Cargo.toml
app/bridge_app_sol/src/: main.rs  mod.rs  sender.rs  utils.rs
bridge/: .gitignore  Anchor.toml  Cargo.toml  geyser-config.json  package-lock.json  package.json  tsconfig.json
bridge/programs/bridge/: Cargo.toml
bridge/programs/bridge/src/: lib.rs
bridge/programs/bridge/src/pair/: admin.rs  cancelorder.rs  createorder.rs  errors.rs  event.rs  execute_sol_order.rs  executeorder.rs  mod.rs  order.rs
bridge/tests/: bridge.ts  generate_keys.ts
bridge/tests/keys/: admin1.json  admin2.json  admin3.json
programs/test/: Cargo.toml
programs/test/src/: lib.rs  wevwev.rs
programs/test/src/errors/: errors.rs  mod.rs
programs/test/src/events/: mod.rs
programs/test/src/instructions/: instructions.rs
programs/test/src/pair/: createorder.rs  errors.rs  event.rs  executeorder.rs  mod.rs  order.rs  pair.rs
programs/test/src/state/: config.rs  mod.rs  user_create_order.rs
solidity/: hardhat.config.js  package-lock.json  package.json
solidity/contracts/: Bridge.sol  Token.sol
solidity/scripts/: deploy.js  simulation.js
tests/: test.ts
