[package]
name = "bridge_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anyhow = "1.0.93"
alloy = { version = "1.0.41", features = ["providers"] }
env = "1.0.1"
tokio = { version = "1" ,features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
]}
