[package]
name = "bridge_app"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge = { path = "../../bridge/programs/bridge" }
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anyhow = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
anchor-spl = "0.32.1"
alloy = { version = "1.0.41", features = ["providers","full"] }
env = "1.0.1"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
]}
yellowstone-grpc-client = "12.0.0"
yellowstone-grpc-proto = "12.0.0"
futures = "0.3.32"
bs58 = "0.5"
hex = "0.4"
base64 = "0.22.1"
serde = "1.0.228"
