[package]
name = "bridge_app_eth"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.41", features = ["providers"] }
env = "1.0.1"
dotenv = "0.15.0"
tokio = { version = "1" ,features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
]}