[package]
name = "bridge_app_sol"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge = { path = "../../bridge/programs/bridge" }
dotenv = "0.15.0"
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anyhow = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
anchor-spl = "0.32.1"